kubernetes/network-policies/05-kubecost.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubecost-allow
  namespace: kubecost
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 4180
  egress:
    # k8s API access (no 'to' = all destinations)
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kubecost
      ports:
        - protocol: TCP
          port: 9090
    - to:
        - namespaceSelector:
            matchLabels:
              name: auth
          podSelector:
            matchLabels:
              app.kubernetes.io/name: dex
      ports:
        - protocol: TCP
          port: 5556
    - to:
        - namespaceSelector:
            matchLabels:
              name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9090
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
