kubernetes/network-policies/06-longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-allow
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 4180
        - protocol: TCP
          port: 9500
        - protocol: TCP
          port: 9501
        - protocol: TCP
          port: 9502
        - protocol: TCP
          port: 9503
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 9500
        - protocol: TCP
          port: 9501
        - protocol: TCP
          port: 9502
        - protocol: TCP
          port: 9503
    - to:
        - namespaceSelector:
            matchLabels:
              name: auth
          podSelector:
            matchLabels:
              app.kubernetes.io/name: dex
      ports:
        - protocol: TCP
          port: 5556
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
